--- a/users/bjhz.yml
+++ b/users/bjhz.yml
@@ -6,7 +6,7 @@ good_words:
   - 第一次感觉到被人需要了，好棒！
 bad_words:
   - 绝不扭曲心中的正义。
-  - 我是风纪委员，接到报案前来。
+  - 我是Judgement，接到报案前来。
   - 反正最后还是报仇不成反被...
   - 打扫泳池时还是穿不怕弄湿的泳衣吧。
   - 反正很久没这个样子了嘛。
